Refactor AuthController and FilesController for improved error handling and code clarity